// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Range icon 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range"
  >
    <div
      class="rc-picker-input rc-picker-input-start"
    >
      <input
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input rc-picker-input-end"
    >
      <input
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="rc-picker-suffix"
    >
      <span
        class="suffix-icon"
      />
    </span>
    <button
      aria-label="清除"
      class="rc-picker-clear"
      type="button"
    >
      <span
        class="suffix-icon"
      />
    </button>
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in placement right 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-focused"
  >
    <div
      class="rc-picker-input rc-picker-input-active rc-picker-input-start"
    >
      <input
        aria-expanded="true"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input rc-picker-input-end"
    >
      <input
        aria-expanded="true"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="position: absolute; width: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-rtl"
  >
    <div
      class="rc-picker-input rc-picker-input-start"
    >
      <input
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input rc-picker-input-end"
    >
      <input
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
  </div>
</div>
`;

exports[`Picker.Range panelRender 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range"
    >
      <div
        class="rc-picker-input rc-picker-input-active rc-picker-input-start"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="start"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input rc-picker-input-end"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="end"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-date-panel-container"
          role="dialog"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <h1>
            Light
          </h1>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in date range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active rc-picker-input-start"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="start"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input rc-picker-input-end"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="end"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-date-panel-container"
          role="dialog"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                  tabindex="0"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        aria-label="上一年 (Control键加左方向键)"
                        class="rc-picker-header-super-prev-btn"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        aria-label="上个月 (翻页上键)"
                        class="rc-picker-header-prev-btn"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          aria-label="选择年份"
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1990年
                        </button>
                        <button
                          aria-label="选择月份"
                          class="rc-picker-month-btn"
                          type="button"
                        >
                          9月
                        </button>
                      </div>
                      <button
                        aria-label="下个月 (翻页下键)"
                        class="rc-picker-header-next-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        aria-label="下一年 (Control键加右方向键)"
                        class="rc-picker-header-super-next-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        aria-label="1990年 9月"
                        class="rc-picker-content"
                        role="grid"
                      >
                        <thead
                          aria-hidden="true"
                        >
                          <tr>
                            <th>
                              一
                            </th>
                            <th>
                              二
                            </th>
                            <th>
                              三
                            </th>
                            <th>
                              四
                            </th>
                            <th>
                              五
                            </th>
                            <th>
                              六
                            </th>
                            <th>
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-08-27"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-08-27"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-08-28"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-08-28"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-08-29"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-08-29"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-08-30"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-08-30"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-08-31"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-08-31"
                            >
                              <div>
                                D
                                31
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-01"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-01"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-02"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-02"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-current="date"
                              aria-disabled="false"
                              aria-label="1990-09-03"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view rc-picker-cell-today"
                              role="gridcell"
                              title="1990-09-03"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-04"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-04"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-05"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-05"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-06"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-06"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-07"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-07"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-08"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-08"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-09"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-09"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-10"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-10"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-11"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-11"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-12"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-12"
                            >
                              <div>
                                D
                                12
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-13"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-13"
                            >
                              <div>
                                D
                                13
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-14"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-14"
                            >
                              <div>
                                D
                                14
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-15"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-15"
                            >
                              <div>
                                D
                                15
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-16"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-16"
                            >
                              <div>
                                D
                                16
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-17"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-17"
                            >
                              <div>
                                D
                                17
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-18"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-18"
                            >
                              <div>
                                D
                                18
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-19"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-19"
                            >
                              <div>
                                D
                                19
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-20"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-20"
                            >
                              <div>
                                D
                                20
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-21"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-21"
                            >
                              <div>
                                D
                                21
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-22"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-22"
                            >
                              <div>
                                D
                                22
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-23"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-23"
                            >
                              <div>
                                D
                                23
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-24"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-24"
                            >
                              <div>
                                D
                                24
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-25"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-25"
                            >
                              <div>
                                D
                                25
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-26"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-26"
                            >
                              <div>
                                D
                                26
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-27"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-27"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-28"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-28"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-29"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-29"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-09-30"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09-30"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-01"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-01"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-02"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-02"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-03"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-03"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-04"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-04"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-05"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-05"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-06"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-06"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-07"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-10-07"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                  tabindex="0"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        aria-label="上一年 (Control键加左方向键)"
                        class="rc-picker-header-super-prev-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        aria-label="上个月 (翻页上键)"
                        class="rc-picker-header-prev-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          aria-label="选择年份"
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1990年
                        </button>
                        <button
                          aria-label="选择月份"
                          class="rc-picker-month-btn"
                          type="button"
                        >
                          10月
                        </button>
                      </div>
                      <button
                        aria-label="下个月 (翻页下键)"
                        class="rc-picker-header-next-btn"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        aria-label="下一年 (Control键加右方向键)"
                        class="rc-picker-header-super-next-btn"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        aria-label="1990年 10月"
                        class="rc-picker-content"
                        role="grid"
                      >
                        <thead
                          aria-hidden="true"
                        >
                          <tr>
                            <th>
                              一
                            </th>
                            <th>
                              二
                            </th>
                            <th>
                              三
                            </th>
                            <th>
                              四
                            </th>
                            <th>
                              五
                            </th>
                            <th>
                              六
                            </th>
                            <th>
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-01"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-01"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-02"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-02"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-03"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-03"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-04"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-04"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-05"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-05"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-06"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-06"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-07"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-07"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-08"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-08"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-09"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-09"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-10"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-10"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-11"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-11"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-12"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-12"
                            >
                              <div>
                                D
                                12
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-13"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-13"
                            >
                              <div>
                                D
                                13
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-14"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-14"
                            >
                              <div>
                                D
                                14
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-15"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-15"
                            >
                              <div>
                                D
                                15
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-16"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-16"
                            >
                              <div>
                                D
                                16
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-17"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-17"
                            >
                              <div>
                                D
                                17
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-18"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-18"
                            >
                              <div>
                                D
                                18
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-19"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-19"
                            >
                              <div>
                                D
                                19
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-20"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-20"
                            >
                              <div>
                                D
                                20
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-21"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-21"
                            >
                              <div>
                                D
                                21
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-22"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-22"
                            >
                              <div>
                                D
                                22
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-23"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-23"
                            >
                              <div>
                                D
                                23
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-24"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-24"
                            >
                              <div>
                                D
                                24
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-25"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-25"
                            >
                              <div>
                                D
                                25
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-26"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-26"
                            >
                              <div>
                                D
                                26
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-27"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-27"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-28"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-28"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-29"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-29"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-30"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-30"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-10-31"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10-31"
                            >
                              <div>
                                D
                                31
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-01"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-01"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-02"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-02"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-03"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-03"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-04"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-04"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-05"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-05"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-06"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-06"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-07"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-07"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-08"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-08"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-09"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-09"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-10"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-10"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11-11"
                              aria-selected="false"
                              class="rc-picker-cell"
                              role="gridcell"
                              title="1990-11-11"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in month range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active rc-picker-input-start"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="start"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input rc-picker-input-end"
      >
        <input
          aria-expanded="true"
          aria-haspopup="dialog"
          aria-invalid="false"
          autocomplete="off"
          date-range="end"
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-month-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-month-panel-container"
          role="dialog"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                  tabindex="0"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        aria-label="上一年 (Control键加左方向键)"
                        class="rc-picker-header-super-prev-btn"
                        type="button"
                      >
                        «
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          aria-label="选择年份"
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1990年
                        </button>
                      </div>
                      <button
                        aria-label="下一年 (Control键加右方向键)"
                        class="rc-picker-header-super-next-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        aria-label="1990年"
                        class="rc-picker-content"
                        role="grid"
                      >
                        <tbody>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-01"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-01"
                            >
                              <div>
                                M
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-02"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-02"
                            >
                              <div>
                                M
                                2
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-03"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-03"
                            >
                              <div>
                                M
                                3
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-04"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-04"
                            >
                              <div>
                                M
                                4
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-05"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-05"
                            >
                              <div>
                                M
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-06"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-06"
                            >
                              <div>
                                M
                                6
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-07"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-07"
                            >
                              <div>
                                M
                                7
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-08"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-08"
                            >
                              <div>
                                M
                                8
                              </div>
                            </td>
                            <td
                              aria-current="date"
                              aria-disabled="false"
                              aria-label="1990-09"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-09"
                            >
                              <div>
                                M
                                9
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1990-10"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-10"
                            >
                              <div>
                                M
                                10
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-11"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-11"
                            >
                              <div>
                                M
                                11
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1990-12"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1990-12"
                            >
                              <div>
                                M
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                  tabindex="0"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        aria-label="上一年 (Control键加左方向键)"
                        class="rc-picker-header-super-prev-btn"
                        style="visibility: hidden;"
                        type="button"
                      >
                        «
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          aria-label="选择年份"
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1991年
                        </button>
                      </div>
                      <button
                        aria-label="下一年 (Control键加右方向键)"
                        class="rc-picker-header-super-next-btn"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        aria-label="1991年"
                        class="rc-picker-content"
                        role="grid"
                      >
                        <tbody>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1991-01"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-01"
                            >
                              <div>
                                M
                                1
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-02"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-02"
                            >
                              <div>
                                M
                                2
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-03"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-03"
                            >
                              <div>
                                M
                                3
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1991-04"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-04"
                            >
                              <div>
                                M
                                4
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-05"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-05"
                            >
                              <div>
                                M
                                5
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-06"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-06"
                            >
                              <div>
                                M
                                6
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1991-07"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-07"
                            >
                              <div>
                                M
                                7
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-08"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-08"
                            >
                              <div>
                                M
                                8
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-09"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-09"
                            >
                              <div>
                                M
                                9
                              </div>
                            </td>
                          </tr>
                          <tr
                            role="row"
                          >
                            <td
                              aria-disabled="false"
                              aria-label="1991-10"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-10"
                            >
                              <div>
                                M
                                10
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-11"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-11"
                            >
                              <div>
                                M
                                11
                              </div>
                            </td>
                            <td
                              aria-disabled="false"
                              aria-label="1991-12"
                              aria-selected="false"
                              class="rc-picker-cell rc-picker-cell-in-view"
                              role="gridcell"
                              title="1991-12"
                            >
                              <div>
                                M
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
